# RecipeManager

./: .editorconfig  README.md  pyproject.toml
recipes/: cookbook.py  server.py  webapp.py
